--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -1,186 +1,208 @@
 ##
-# Gnome 3.6
+# Gnome 3.9
+##
+=gnome-extra/gucharmap-3.9*
+=dev-libs/libgpg-error-1.12*
+=app-admin/gnome-system-log-3.9*
+
+##
+# Gnome 3.10
 ##
 =app-accessibility/accerciser-3.8*
-=app-accessibility/at-spi2-atk-2.8*
-=app-accessibility/at-spi2-core-2.8*
+=app-accessibility/at-spi2-atk-2.10*
+=app-accessibility/at-spi2-core-2.10*
 =app-accessibility/caribou-0.4*
-=app-accessibility/orca-3.8*
+=app-accessibility/orca-3.10*
 =app-admin/eselect-gnome-shell-extensions-20120911
 =app-admin/gnome-system-log-3.8*
 =app-admin/openrc-settingsd-1.0*
 =app-admin/packagekit-base-0.7*
 =app-admin/packagekit-gtk-0.7*
-=app-arch/file-roller-3.8*
+=app-arch/file-roller-3.10*
 =app-cdr/brasero-3.8*
-=app-crypt/gcr-3.8*
+=app-crypt/gcr-3.10*
 =app-crypt/libsecret-0*
-=app-crypt/p11-kit-0.18*
-=app-crypt/seahorse-3.8*
+=app-crypt/p11-kit-0.20*
+=app-crypt/seahorse-3.10*
 =app-crypt/seahorse-sharing-3.8*
-=app-dicts/gnome-dictionary-3.6*
-=app-editors/gedit-3.8*
-=app-editors/gedit-plugins-3.8*
-=app-editors/ghex-3.8*
+=app-dicts/gnome-dictionary-3.10*
+=app-editors/gedit-3.10*
+=app-editors/gedit-plugins-3.10*
+=app-editors/ghex-3.10*
 =app-editors/latexila-2.8*
 =app-emulation/libvirt-glib-0.1*
 =app-i18n/ibus-1.4*
 =app-i18n/ibus-1.5*
-=app-misc/gnote-3.8*
+=app-misc/bijiben-3.10*
+=app-misc/gnote-3.10*
 =app-misc/tracker-0.16*
-=app-text/evince-3.8*
+=app-text/evince-3.10*
 =app-text/ghostscript-gpl-9*
 =app-text/qpdf-3.0*
-=app-text/yelp-tools-3.6*
+=app-text/poppler-0.24*
+=app-text/yelp-tools-3.10*
 
-=dev-cpp/glibmm-2.36*
+=dev-cpp/glibmm-2.38*
 =dev-cpp/gtkmm-2.24*
-=dev-cpp/gtkmm-3.7*
-=dev-cpp/gtkmm-3.8*
+=dev-cpp/gtkmm-3.10*
 =dev-db/sqlite-3.7*
+=dev-lang/orc-0.4*
 =dev-lang/spidermonkey-1.8.5*
 =dev-lang/spidermonkey-17.0*
-=dev-lang/vala-0.20*
-=dev-libs/atk-2.7*
-=dev-libs/atk-2.8*
+=dev-lang/vala-0.22*
+=dev-libs/atk-2.10*
 =dev-libs/dee-1.0*
 =dev-libs/folks-0.9*
 =dev-libs/folks-0.10*
-=dev-libs/gdl-3.8*
-=dev-libs/gjs-1.36*
-=dev-libs/glib-2.36*
-=dev-libs/gobject-introspection-1.36*
-=dev-libs/gobject-introspection-common-1.36*
+=dev-libs/gdl-3.10*
+=dev-libs/gjs-1.38*
+=dev-libs/glib-2.38*
+=dev-libs/gobject-introspection-1.38*
+=dev-libs/gobject-introspection-common-1.38*
 =dev-libs/json-glib-0.16*
 =dev-libs/libatasmart-0.19*
 =dev-libs/libgdata-0.13*
-=dev-libs/libgweather-3.8*
+=dev-libs/libgweather-3.10*
 =dev-libs/libgee-0.10*
-=dev-libs/libpeas-1.8*
+=dev-libs/libpeas-1.9*
 =dev-libs/libpwquality-1.2*
 =dev-libs/libtasn1-2.14*
 =dev-libs/libzeitgeist-0.3*
 =dev-libs/nss-3.15* 
-=dev-libs/totem-pl-parser-3.4*
-=dev-libs/vala-common-0.20*
+=dev-libs/totem-pl-parser-3.10*
+=dev-libs/vala-common-0.22*
+=dev-lua/luajson-1.3*
+=dev-lua/lpeg-0.12*
+=dev-lua/LuaBitOp-1.0*
 =dev-python/dbus-python-1.1*
 =dev-python/isodate-0.4*
-=dev-python/pyatspi-2.8*
+=dev-python/pyatspi-2.10*
 =dev-python/pycairo-1.10*
 =dev-python/pycups-1.9*
-=dev-python/pygobject-3.8*
+=dev-python/pygobject-3.10*
 =dev-python/python-geoclue-0.1*
 =dev-python/pyxdg-0.25*
 =dev-python/rdflib-3.2*
 =dev-util/anjuta-3.8*
 =dev-util/devhelp-3.8*
 =dev-util/gdbus-codegen-2.36*
-=dev-util/gnome-devel-docs-3.8*
+=dev-util/gnome-devel-docs-3.10*
+=dev-util/gtk-builder-convert-2.24*
 =dev-util/fix-la-relink-command-0.1*
 
-=games-board/aisleriot-3.4*
-=gnome-base/dconf-0.16*
+=games-arcade/gnome-nibbles-3.10*
+=games-arcade/gnome-robots-3.10*
+=games-board/four-in-a-row-3.10*
+=games-board/gnome-chess-3.10*
+=games-board/gnome-mahjongg-3.10*
+=games-board/gnome-mines-3.10*
+=games-board/iagno-3.10*
+=games-board/tali-3.10*
+=games-puzzle/five-or-more-3.10*
+=games-puzzle/gnome-klotski-3.10*
+=games-puzzle/gnome-sudoku-3.10*
+=games-puzzle/gnome-tetravex-3.10*
+=games-puzzle/lightsoff-3.10*
+=games-puzzle/quadrapassel-3.10*
+=games-puzzle/swell-foop-3.10*
+=gnome-base/dconf-0.18*
 =gnome-base/gconf-3.2*
-=gnome-base/gdm-3.8*
-=gnome-base/gnome-3.6*
+=gnome-base/gdm-3.10*
 =gnome-base/gnome-3.8*
-=gnome-base/gnome-applets-3.6*
-=gnome-base/gnome-common-3.6*
-=gnome-base/gnome-control-center-3.8*
+=gnome-base/gnome-applets-3.8*
+=gnome-base/gnome-common-3.8*
+=gnome-base/gnome-control-center-3.10*
 =gnome-base/gnome-core-apps-3*
 =gnome-base/gnome-core-libs-3*
-=gnome-base/gnome-desktop-3.8*
+=gnome-base/gnome-desktop-3.10*
 =gnome-base/gnome-extra-apps-3*
 =gnome-base/gnome-fallback-3*
-=gnome-base/gnome-keyring-3.8*
+=gnome-base/gnome-keyring-3.10*
 =gnome-base/gnome-light-3*
-=gnome-base/gnome-menus-3.8*
-=gnome-base/gnome-panel-3.6*
-=gnome-base/gnome-session-3.8*
-=gnome-base/gnome-settings-daemon-3.8*
-=gnome-base/gnome-shell-3.8*
-=gnome-base/gsettings-desktop-schemas-3.8*
-=gnome-base/gvfs-1.16*
+=gnome-base/gnome-menus-3.10*
+=gnome-base/gnome-panel-3.8*
+=gnome-base/gnome-session-3.10*
+=gnome-base/gnome-settings-daemon-3.10*
+=gnome-base/gnome-shell-3.10*
+=gnome-base/gsettings-desktop-schemas-3.10*
+=gnome-base/gvfs-1.18*
 =gnome-base/libgdu-3.0*
-=gnome-base/libgnome-keyring-3.8*
-=gnome-base/libgnomekbd-3.6*
-=gnome-base/librsvg-2.36*
-=gnome-base/nautilus-3.8*
-=gnome-extra/evolution-data-server-3.8*
+=gnome-base/libgnome-keyring-3.10*
+=gnome-base/libgnomekbd-3.8*
+=gnome-base/librsvg-2.40*
+=gnome-base/nautilus-3.10*
+=gnome-extra/evolution-data-server-3.10*
 =gnome-extra/evolution-ews-3.8*
 =gnome-extra/evolution-kolab-3.8*
 =gnome-extra/gcalctool-6.6*
 =gnome-extra/gconf-editor-3.0*
-=gnome-extra/gnome-boxes-3.6*
+=gnome-extra/gnome-boxes-3.10*
 =gnome-extra/gnome-boxes-nonfree-0.0*
-=gnome-extra/gnome-calculator-3.8*
-=gnome-extra/gnome-clocks-3.8*
-=gnome-extra/gnome-color-manager-3.8*
-=gnome-extra/gnome-contacts-3.8*
-=gnome-extra/gnome-documents-3.8*
+=gnome-extra/gnome-calculator-3.10*
+=gnome-extra/gnome-clocks-3.10*
+=gnome-extra/gnome-color-manager-3.10*
+=gnome-extra/gnome-contacts-3.10*
+=gnome-extra/gnome-documents-3.10*
 =gnome-extra/gnome-games-3.6*
-=gnome-extra/gnome-packagekit-3.6*
-=gnome-extra/gnome-power-manager-3.8*
+=gnome-extra/gnome-packagekit-3.8*
+=gnome-extra/gnome-power-manager-3.10*
 =gnome-extra/gnome-screensaver-3.6*
-=gnome-extra/gnome-search-tool-3.6*
-=gnome-extra/gnome-shell-extensions-3.8*
-=gnome-extra/gnome-system-monitor-3.8*
-=gnome-extra/gnome-tweak-tool-3.7*
-=gnome-extra/gnome-tweak-tool-3.8*
-=gnome-extra/gnome-user-docs-3.8*
-=gnome-extra/gnome-user-share-3.8*
-=gnome-extra/gnome-utils-3.6*
+=gnome-extra/gnome-search-tool-3.8*
+=gnome-extra/gnome-shell-extensions-3.10*
+=gnome-extra/gnome-system-monitor-3.10*
+=gnome-extra/gnome-tweak-tool-3.10*
+=gnome-extra/gnome-user-docs-3.10*
+=gnome-extra/gnome-user-share-3.10*
+=gnome-extra/gnome-utils-3.8*
+=gnome-extra/gnome-weather-3.10*
 =gnome-extra/gtkhtml-4.6*
-=gnome-extra/gucharmap-3.8*
-=gnome-extra/mousetweaks-3.8*
+=gnome-extra/gucharmap-3.10*
+=gnome-extra/mousetweaks-3.10*
 =gnome-extra/nautilus-sendto-3.8*
 =gnome-extra/nautilus-tracker-tags-0.16*
 =gnome-extra/nm-applet-0.9.8*
 =gnome-extra/office-runner-1.0.1*
-=gnome-extra/seahorse-nautilus-3.8*
-=gnome-extra/sushi-3.8*
-=gnome-extra/yelp-3.8*
-=gnome-extra/yelp-xsl-3.8*
+=gnome-extra/seahorse-nautilus-3.10*
+=gnome-extra/sushi-3.10*
+=gnome-extra/yelp-3.10*
+=gnome-extra/yelp-xsl-3.10*
 =gnome-extra/zeitgeist-0.9*
 =gnome-extra/zeitgeist-extensions-0.0*
 =gnome-extra/zeitgeist-datasources-0.8*
 =gnome-extra/zenity-3.8*
 
-=mail-client/evolution-3.8*
-=media-gfx/eog-3.8*
-=media-gfx/eog-plugins-3.8*
-=media-gfx/gnome-font-viewer-3.8*
-=media-gfx/gnome-screenshot-3.6*
-=media-gfx/gnome-screenshot-3.8*
+=mail-client/evolution-3.10*
+=media-gfx/eog-3.10*
+=media-gfx/eog-plugins-3.10*
+=media-gfx/gnome-font-viewer-3.10*
+=media-gfx/gnome-photos-3.10*
+=media-gfx/gnome-screenshot-3.10*
 =media-gfx/gthumb-3.2*
 =media-gfx/postr-0.13*
 =media-gfx/sane-backends-1.0.23*
-=media-gfx/shotwell-0.12*
 =media-gfx/shotwell-0.14*
-=media-libs/clutter-1.13*
-=media-libs/clutter-1.14*
-=media-libs/clutter-gst-1.6*
-=media-libs/clutter-gst-1.9*
+=media-libs/clutter-1.16*
 =media-libs/clutter-gst-2.0*
 =media-libs/clutter-gtk-1.4*
-=media-libs/cogl-1.13*
-=media-libs/cogl-1.14*
+=media-libs/cogl-1.16*
 =media-libs/fontconfig-2.10*
 =media-libs/gexiv2-0.4*
 =media-libs/gexiv2-0.6*
 =media-libs/grilo-0.2*
 =media-libs/gupnp-dlna-0.10*
 =media-libs/gst-plugins-bad-1.0*
-=media-libs/gst-plugins-base-1.0*
-=media-libs/gst-plugins-good-1.0*
+=media-libs/gst-plugins-base-1.1*
+=media-libs/gst-plugins-good-1.1*
 =media-libs/gst-plugins-ugly-1.0*
-=media-libs/gstreamer-1.0*
+=media-libs/gstreamer-1.2*
 =media-libs/harfbuzz-0.9*
 =media-libs/lcms-2.5*
 =media-libs/libchamplain-0.12*
 =media-libs/libgnome-media-profiles-3*
 =media-libs/libgphoto2-2.5*
-=media-libs/libpng-1.6.3*
+=media-libs/libpng-1.6.6*
+=media-libs/libquvi-0.9*
+=media-libs/libquvi-scripts-0.9*
 =media-libs/libvpx-1.1*
 =media-libs/libwebp-0.3*
 =media-libs/musicbrainz-5.0*
@@ -212,27 +234,29 @@
 =media-plugins/gst-plugins-taglib-1.0*
 =media-plugins/gst-plugins-twolame-1.0* 
 =media-plugins/gst-plugins-v4l2-1.0*
+=media-plugins/gst-plugins-vaapi-0.4*
 =media-plugins/gst-plugins-vpx-1.0*
 =media-plugins/gst-plugins-x264-1.0*
+=media-sound/gnome-music-3.10*
 =media-sound/pulseaudio-3*
 =media-sound/sound-juicer-3.5*
-=media-sound/sound-juicer-3.6*
-=media-video/cheese-3.8*
+=media-sound/sound-juicer-3.8*
+=media-video/cheese-3.10*
 =media-video/gnome-video-effects-0.4*
-=media-video/totem-3.8*
+=media-video/totem-3.10*
 
 =net-analyzer/gnome-nettool-3.2*
-=net-fs/samba-3.6.16*
-=net-im/empathy-3.8*
+=net-fs/samba-3.6*
+=net-im/empathy-3.10*
 =net-im/telepathy-logger-0.8*
 =net-im/telepathy-mission-control-5.14*
 =net-libs/farstream-0.2*
-=net-libs/glib-networking-2.36*
-=net-libs/gnome-online-accounts-3.8*
+=net-libs/glib-networking-2.38*
+=net-libs/gnome-online-accounts-3.10*
+=net-libs/gnome-online-miners-3.10*
 =net-libs/gssdp-0.12*
 =net-libs/gssdp-0.14*
 =net-libs/gupnp-igd-0.2*
-=net-libs/gupnp-0.18*
 =net-libs/gupnp-0.20*
 =net-libs/libgrss-0.5*
 =net-libs/libqmi-1.0*
@@ -240,53 +264,54 @@
 =net-libs/liboauth-0.9*
 =net-libs/liboauth-1.0*
 =net-libs/libproxy-0.4*
-=net-libs/libsoup-2.42*
-=net-libs/libsoup-gnome-2.42*
+=net-libs/libsoup-2.44*
+=net-libs/libsoup-gnome-2.44*
 =net-libs/libzapojit-0.0*
 =net-libs/rb_libtorrent-0.16*
 =net-libs/rest-0.7*
 =net-libs/rest-0.8*
 =net-libs/telepathy-farstream-0.6*
 =net-libs/telepathy-glib-0.20*
-=net-libs/webkit-gtk-1.11*
-=net-libs/webkit-gtk-2.0*
+=net-libs/webkit-gtk-2.2*
 =net-misc/networkmanager-0.9.8*
 =net-misc/networkmanager-openvpn-0.9.8*
 =net-misc/modemmanager-0.7*
 =net-misc/modemmanager-0.8*
+=net-misc/rygel-0.20*
 =net-misc/spice-gtk-0.14*
-=net-misc/vinagre-3.8*
-=net-misc/vino-3.8*
+=net-misc/vinagre-3.10*
+=net-misc/vino-3.10*
 =net-print/cups-1.6*
 =net-print/cups-filters-1.0*
 =net-print/cups-pk-helper-0.2*
 =net-voip/telepathy-gabble-0.16*
-=net-wireless/gnome-bluetooth-3.8*
+=net-wireless/gnome-bluetooth-3.10*
 
-=sci-geosciences/geocode-glib-0.99*
+=sci-geosciences/geocode-glib-0.99* **
+=sci-geosciences/geocode-glib-3.10* 
+=sci-geosciences/gnome-maps-3.10*
 =sys-apps/accountsservice-0.6*
-=sys-apps/baobab-3.8*
-=sys-apps/gnome-disk-utility-3.8*
+=sys-apps/baobab-3.10*
+=sys-apps/gnome-disk-utility-3.10*
 =sys-auth/consolekit-0.4.5_p20120320*
 =sys-auth/nss-myhostname-0.3*
 =sys-auth/polkit-0.107*
 =sys-auth/polkit-0.111*
 =sys-devel/make-3.82*
-=sys-fs/udisks-2.0*
+=sys-fs/udisks-2.1*
 =sys-libs/libosinfo-0.2*
 =sys-libs/tevent-0.9.18*
 
-=www-client/epiphany-3.8*
+=www-client/epiphany-3.10*
 
 =x11-libs/cairo-1.12*
 =x11-libs/colord-gtk-0.1*
-=x11-libs/gdk-pixbuf-2.28*
+=x11-libs/gdk-pixbuf-2.30*
 =x11-libs/gnome-pty-helper-0.34*
 =x11-libs/gtk+-2.24*
-=x11-libs/gtk+-2.28*
-=x11-libs/gtk+-3.8*
-=x11-libs/gtksourceview-3.8*
-=x11-libs/libcryptui-3.8*
+=x11-libs/gtk+-3.10*
+=x11-libs/gtksourceview-3.10*
+=x11-libs/libcryptui-3.10*
 =x11-libs/libnotify-0.7*
 =x11-libs/libwnck-3.4*
 =x11-libs/libwnck-3.8*
@@ -294,21 +319,21 @@
 =x11-libs/libxkbcommon-0.2*
 =x11-libs/libxklavier-5.3*
 =x11-libs/mx-1.4*
-=x11-libs/pango-1.34*
+=x11-libs/pango-1.36*
 =x11-libs/pangox-compat-0*
 =x11-libs/vte-0.34*
-=x11-misc/alacarte-3.6*
-=x11-misc/colord-0.1*
+=x11-misc/alacarte-3.10*
+=x11-misc/colord-1.0*
 =x11-misc/notification-daemon-0.7*
 =x11-proto/inputproto-2.3*
-=x11-terms/gnome-terminal-3.8*
-=x11-themes/gnome-backgrounds-3.8*
-=x11-themes/gnome-icon-theme-3.8*
+=x11-terms/gnome-terminal-3.10*
+=x11-themes/gnome-backgrounds-3.10*
+=x11-themes/gnome-icon-theme-3.10*
 =x11-themes/gnome-icon-theme-extras-3.8*
-=x11-themes/gnome-icon-theme-symbolic-3.8*
-=x11-themes/gnome-themes-standard-3.8*
+=x11-themes/gnome-icon-theme-symbolic-3.10*
+=x11-themes/gnome-themes-standard-3.10*
 =x11-wm/metacity-2.34*
-=x11-wm/mutter-3.8*
+=x11-wm/mutter-3.10*
 
 
 ##
@@ -348,7 +373,7 @@ sci-geosciences/googleearth
 =dev-libs/re2-0*
 =app-admin/eselect-opengl-1.2*
 =dev-libs/json-c-0.10*
-=media-video/ffmpeg-1.0*
+=media-video/ffmpeg-1.2*
 =app-accessibility/speech-dispatcher-0.8*
 =www-plugins/adobe-flash-11.3*
 www-client/chromium
@@ -435,9 +460,13 @@ games-util/steam-base
 games-util/steam-client-meta
 games-util/steam-meta
 games-util/steam-games-meta
-=media-libs/libsdl-2.0*
+media-libs/libsdl2 **
 games-util/steam-launcher
 app-emulation/steam-runtime-bin
+=dev-libs/libappindicator-12.10*
+=dev-libs/libindicator-12.10*
+=dev-libs/libdbusmenu-0.6*
+=dev-libs/gobject-introspection-1.36.0-r1 **
 
 ##
 # LibreOffice
@@ -467,6 +496,8 @@ dev-db/mysql-workbench
 dev-util/visualvm
 =dev-vcs/rabbitvcs-0.15.2 ~amd64
 =app-emulation/wine-1.5*
+=virtual/jpeg-62*
+=net-print/hplip-3.13*
 
 ##
 # Hybrid Graphic nVidia/Intel
@@ -483,10 +514,150 @@ sys-apps/systemd
 =sys-process/audit-2.2*
 =sys-apps/systemd-ui-2*
 sys-apps/systemd-units
+=sys-apps/gentoo-systemd-integration-1*
 
 ##
 # Cinnamon
 ##
-=gnome-extra/cinnamon-1.8*
-=x11-wm/muffin-1.8*
-=gnome-extra/nemo-1.8*
+=gnome-extra/cinnamon-2.0*
+=x11-wm/muffin-2.0*
+=gnome-extra/nemo-2.0*
+
+##
+# 32bit Support
+##
+=dev-libs/libusbx-1.0*
+=dev-libs/expat-2.1*
+=media-libs/tiff-3.9*
+=sys-libs/libavc1394-0.5*
+=virtual/jpeg-0*
+=virtual/libusb-0*
+=sys-libs/e2fsprogs-libs-1.42*
+=sys-fs/e2fsprogs-1.42*
+=sys-libs/gpm-1.20*
+=app-arch/bzip2-1.0*
+=dev-libs/libusb-compat-0.1*
+=dev-libs/libffi-3.0*
+=sys-apps/attr-2.4*
+=dev-libs/udis86-1.7*
+=dev-libs/elfutils-0.156*
+=app-arch/xz-utils-5.0*
+=virtual/libffi-3.0*
+=media-libs/libjpeg-turbo-1.3*
+=media-libs/libpng-1.2*
+=sys-libs/libraw1394-2.1*
+=app-text/libpaper-1.1*
+=sys-devel/llvm-3.3*
+=virtual/libusb-1*
+=sys-libs/ncurses-5.9*
+=virtual/libiconv-0*
+=x11-proto/xineramaproto-1.2*
+=x11-proto/xf86vidmodeproto-2.3*
+=x11-libs/libXScrnSaver-1.2*
+=x11-libs/libpciaccess-0.13*
+=x11-libs/libXext-1.3*
+=x11-libs/libXpm-3.5*
+=media-libs/freetype-2.4*
+=x11-proto/xf86bigfontproto-1.2*
+=x11-proto/xf86dgaproto-2.1*
+=x11-libs/libvdpau-0.7*
+=dev-libs/libpthread-stubs-0.3*
+=x11-libs/libXxf86vm-1.1*
+=x11-proto/renderproto-0.11*
+=x11-libs/libXrandr-1.4*
+=x11-libs/libXmu-1.1*
+=x11-libs/libXau-1.0*
+=x11-libs/libXft-2.3*
+=x11-libs/libxcb-1.9*
+=x11-libs/libXxf86dga-1.1*
+=x11-proto/recordproto-1.14*
+=x11-proto/compositeproto-0.4*
+=x11-libs/libXcomposite-0.4*
+=x11-libs/libXt-1.1*
+=x11-libs/libXrender-0.9*
+=x11-libs/libXvMC-1.0*
+=x11-proto/xproto-7.0*
+=x11-proto/scrnsaverproto-1.2*
+=x11-libs/libXp-1.0*
+=x11-proto/randrproto-1.4*
+=x11-libs/libXaw-1.0*
+=x11-libs/libXv-1.0*
+=x11-proto/videoproto-2.3*
+=x11-libs/libXtst-1.2*
+=x11-libs/libX11-1.6*
+=x11-libs/libXfixes-5.0*
+=x11-libs/libXcursor-1.1*
+=x11-proto/xextproto-7.2*
+=x11-proto/xcb-proto-1.8*
+=x11-libs/libICE-1.0*
+=x11-proto/printproto-1.0*
+=x11-proto/damageproto-1.2*
+=x11-proto/kbproto-1.0*
+=x11-libs/libXdmcp-1.1*
+=x11-libs/libSM-1.2*
+=x11-libs/libXinerama-1.1*
+=x11-libs/libXdamage-1.1*
+=x11-proto/fixesproto-5.0*
+=media-libs/libsamplerate-0.1*
+=media-plugins/caps-plugins-0.9*
+=media-sound/musepack-tools-465*
+=media-libs/ladspa-sdk-1.13*
+=media-plugins/swh-plugins-0.4*
+=media-sound/cdparanoia-3.10*
+=media-libs/libcuefile-477*
+=media-libs/libmodplug-0.8.8*
+=media-libs/libmikmod-3.2*
+=media-libs/audiofile-0.3*
+=media-libs/alsa-lib-1.0.27*
+=media-libs/libsndfile-1.0.25*
+=media-libs/flac-1.2*
+=media-libs/libogg-1.3*
+=media-plugins/alsaequal-0.6*
+=media-libs/libvorbis-1.3*
+=media-sound/jack-audio-connection-kit-0.121*
+=media-sound/twolame-0.3*
+=media-sound/wavpack-4.60*
+=media-libs/libreplaygain-477*
+=sci-libs/fftw-3.3*
+=media-libs/portaudio-19*
+=app-admin/eselect-cdparanoia-0.1*
+=media-sound/mpg123-1.15*
+=media-sound/gsm-1.0*
+=media-libs/x264-0.0*
+=media-libs/speex-1.2*
+=media-libs/libdvdnav-4.2*
+=media-libs/a52dec-0.7*
+=dev-libs/liboil-0.3*
+=media-libs/faad2-2.7*
+=media-libs/libmpeg2-0.5*
+=sys-libs/libieee1284-0.2*
+=media-libs/faac-1.28*
+=media-libs/libsidplay-1.36*
+=media-libs/libdca-0.0*
+=media-libs/libtheora-1.1*
+=media-libs/xvid-1.3*
+=media-libs/libmms-0.6*
+=media-libs/libsidplay-2.1*
+=media-libs/libmad-0.15*
+=media-libs/libvisual-0.4*
+=dev-libs/fribidi-0.19*
+=media-libs/libv4l-1.0*
+=media-video/dirac-1.0*
+=media-sound/lame-3.99*
+=media-libs/vo-aacenc-0.1*
+=media-libs/libid3tag-0.15*
+=media-libs/libshout-2.3*
+=media-libs/libdv-1.0*
+=media-libs/libmimic-1.0*
+=media-libs/libdvdcss-1.2*
+=media-libs/libvpx-1.2*
+=media-libs/libiec61883-1.2*
+=media-libs/libdvdread-4.2*
+=media-video/ffmpeg-0.10*
+=dev-libs/libcdio-0.90*
+=media-libs/libaacplus-2.0*
+=dev-libs/libcdio-paranoia-0.90*
+dev-libs/libdbusmenu2
+dev-libs/libappindicator2
+dev-libs/libindicator2
+
