--- a/portage/package.use/.desktop
+++ b/portage/package.use/.desktop
@@ -11,14 +11,14 @@ net-im/telepathy-connection-managers	icq jabber msn yahoo
 net-libs/farstream			msn upnp
 net-libs/libnice			upnp
 net-im/pidgin				idn -eds
-mail-client/thunderbird			gconf
+mail-client/thunderbird			gconf system-cairo system-icu
 media-video/ffmpeg			aacplus amr avx cdio cpudetection dirac faac libv4l theora threads v4l vdpau vpx
 virtual/ffmpeg				theora threads vdpau
 =media-plugins/gst-plugins-meta-1.0*    ffmpeg http lame libvisual taglib theora v4l vpx
-=media-plugins/gst-plugins-meta-0.10*   -ffmpeg http lame libvisual taglib theora v4l vpx
+=media-plugins/gst-plugins-meta-0.10*   ffmpeg http lame libvisual taglib theora v4l vpx
 www-plugins/adobe-flash			vdpau
 media-video/vlc				dirac theora twolame wma-fixed
-app-emulation/wine			openal opencl xcomposite -perl
+app-emulation/wine			openal opencl xcomposite -perl mono
 sys-block/gparted			btrfs fat ntfs
 app-emulation/virtualbox		extensions vnc
 mail-client/claws-mail			bogofilter
@@ -41,6 +41,8 @@ gnome-extra/zeitgeist                   extensions icu plugins
 gnome-extra/zeitgeist-extensions        geolocation
 =gnome-extra/zeitgeist-datasources-0.8.0.1 -eog
 net-misc/spice-gtk			gstreamer -pulseaudio
+media-video/cheese			grilo 
+app-misc/geoclue                        geonames gps gsmloc hostip nominatim plazes skyhook 
 
 ##
 # Test
@@ -69,14 +71,13 @@ app-office/libreoffice			gtk3 jemalloc telepathy
 app-emulation/emul-linux-x86-qtlibs	gtkstyle
 app-emulation/libvirt			qemu
 app-emulation/qemu			spice
-=net-misc/spice-gtk-0.14*		-gstreamer
-=gnome-base/gnome-light-3.6*    	-fallback
+#=net-misc/spice-gtk-0.14*		-gstreamer
+#=gnome-base/gnome-light-3.6*    	-fallback
 gnome-extra/evolution-data-server	google
-=media-libs/emotion-1.7.6*	        -gstreamer vlc
->=media-libs/libsdl-2.0.0               abi_x86_32
-=media-plugins/gst-plugins-meta-0.10*   -ffmpeg
-=www-client/firefox-21*		        -gstreamer
-dev-libs/gobject-introspection          python_single_target_python2_7
+#=media-libs/emotion-1.7.6*	        -gstreamer vlc
+#=media-plugins/gst-plugins-meta-0.10*   -ffmpeg
+#<www-client/firefox-25.0	        -gstreamer
+#dev-libs/gobject-introspection          python_single_target_python2_7
 sys-apps/systemd 		openrc
 net-misc/networkmanager 	-consolekit
 www-client/firefox		system-cairo
