--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -34,6 +34,7 @@
 =app-i18n/ibus-1.4*
 =app-i18n/ibus-1.5*
 =app-misc/bijiben-3.10*
+=app-misc/geoclue-2.0*
 =app-misc/gnote-3.10*
 =app-misc/tracker-0.16*
 =app-text/evince-3.10*
