--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -62,6 +62,7 @@
 =dev-libs/gobject-introspection-common-1.38*
 =dev-libs/json-glib-0.16*
 =dev-libs/libatasmart-0.19*
+=dev-libs/libevdev-0.4*
 =dev-libs/libgdata-0.13*
 =dev-libs/libgweather-3.10*
 =dev-libs/libgee-0.10*
@@ -72,6 +73,7 @@
 =dev-libs/nss-3.15* 
 =dev-libs/totem-pl-parser-3.10*
 =dev-libs/vala-common-0.22*
+=dev-libs/weston-1.2*
 =dev-lua/luajson-1.3*
 =dev-lua/lpeg-0.12*
 =dev-lua/LuaBitOp-1.0*
@@ -335,7 +337,7 @@
 =x11-themes/gnome-themes-standard-3.10*
 =x11-wm/metacity-2.34*
 =x11-wm/mutter-3.10*
-
+=x11-wm/mutter-wayland-3.10*
 
 ##
 # Enlightenment
