--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -241,7 +241,7 @@
 =media-plugins/gst-plugins-vpx-1.0*
 =media-plugins/gst-plugins-x264-1.0*
 =media-sound/gnome-music-3.10*
-=media-sound/pulseaudio-3*
+=media-sound/pulseaudio-4*
 =media-sound/sound-juicer-3.5*
 =media-sound/sound-juicer-3.8*
 =media-video/cheese-3.10*
@@ -288,6 +288,7 @@
 =net-print/cups-filters-1.0*
 =net-print/cups-pk-helper-0.2*
 =net-voip/telepathy-gabble-0.16*
+=net-wireless/bluez-5*
 =net-wireless/gnome-bluetooth-3.10*
 
 =sci-geosciences/geocode-glib-0.99* **
