--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -194,9 +194,17 @@
 =media-libs/grilo-0.2*
 =media-libs/gupnp-dlna-0.10*
 =media-libs/gst-plugins-bad-1.0*
+=media-libs/gst-plugins-base-1.0*
+=media-libs/gst-plugins-good-1.0*
+=media-libs/gst-plugins-ugly-1.0*
+=media-libs/gst-plugins-bad-1.1*
 =media-libs/gst-plugins-base-1.1*
 =media-libs/gst-plugins-good-1.1*
-=media-libs/gst-plugins-ugly-1.0*
+=media-libs/gst-plugins-ugly-1.1*
+=media-libs/gst-plugins-bad-1.2*
+=media-libs/gst-plugins-base-1.2*
+=media-libs/gst-plugins-good-1.2*
+=media-libs/gst-plugins-ugly-1.2*
 =media-libs/gstreamer-1.2*
 =media-libs/harfbuzz-0.9*
 =media-libs/lcms-2.5*
@@ -240,6 +248,34 @@
 =media-plugins/gst-plugins-vaapi-0.4*
 =media-plugins/gst-plugins-vpx-1.0*
 =media-plugins/gst-plugins-x264-1.0*
+
+=media-plugins/gst-plugins-a52dec-1.2*
+=media-plugins/gst-plugins-cdparanoia-1.2*
+=media-plugins/gst-plugins-dts-1.2*
+=media-plugins/gst-plugins-dv-1.2*
+=media-plugins/gst-plugins-dvdread-1.2*
+=media-plugins/gst-plugins-faad-1.2*
+=media-plugins/gst-plugins-flac-1.2*
+=media-plugins/gst-plugins-jpeg-1.2*
+=media-plugins/gst-plugins-lame-1.2*
+=media-plugins/gst-plugins-libav-1.2*
+=media-plugins/gst-plugins-libmms-1.2*
+=media-plugins/gst-plugins-libnice-0.1*
+=media-plugins/gst-plugins-libvisual-1.2*
+=media-plugins/gst-plugins-meta-1.2*
+=media-plugins/gst-plugins-mad-1.2*
+=media-plugins/gst-plugins-mimic-1.2*
+=media-plugins/gst-plugins-mpeg2dec-1.2*
+=media-plugins/gst-plugins-pulse-1.2*
+=media-plugins/gst-plugins-resindvd-1.2*
+=media-plugins/gst-plugins-soup-1.2*
+=media-plugins/gst-plugins-taglib-1.2*
+=media-plugins/gst-plugins-twolame-1.2*
+=media-plugins/gst-plugins-v4l2-1.2*
+=media-plugins/gst-plugins-vaapi-0.4*
+=media-plugins/gst-plugins-vpx-1.2*
+=media-plugins/gst-plugins-x264-1.2*
+
 =media-sound/gnome-music-3.10*
 =media-sound/pulseaudio-4*
 =media-sound/sound-juicer-3.5*
@@ -378,6 +414,7 @@ sci-geosciences/googleearth
 =app-admin/eselect-opengl-1.2*
 =dev-libs/json-c-0.10*
 =media-video/ffmpeg-1.2*
+=virtual/ffmpeg-9*
 =app-accessibility/speech-dispatcher-0.8*
 =www-plugins/adobe-flash-11.3*
 www-client/chromium
