--- a/portage/package.use/.desktop
+++ b/portage/package.use/.desktop
@@ -85,7 +85,8 @@ net-misc/networkmanager 	-consolekit
 www-client/firefox		system-cairo system-icu
 sys-fs/udisks			-crypt
 www-plugins/chrome-binary-plugins 	google-chrome
-
+net-print/cups-filters          -foomatic
+net-print/cups			-filters
 ##
 # Plymouth
 ##
@@ -113,3 +114,5 @@ media-libs/mesa				python_single_target_python2_7
 gnome-extra/cinnamon			python_single_target_python2_7
 net-voip/telepathy-haze			python_single_target_python2_7
 media-libs/alsa-lib			python_single_target_python2_7
+net-analyzer/net-snmp                   python_single_target_python2_7
+dev-util/gtk-builder-convert            python_single_target_python2_7
