--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -1,5 +1,43 @@
 =dev-db/sqlite-3.8.3*
 =sys-devel/gettext-0.18.3*
+=media-libs/mesa-9.2*
+=dev-libs/icu-52*
+=media-libs/x264-0.0.20130912*
+=dev-util/gtk-doc-1.20*
+
+##
+# Gnome 3.11
+##
+#=net-misc/networkmanager-9999 **
+#=dev-libs/libndp-9999 **
+
+#=app-accessibility/at-spi2-atk-2.11*
+#=app-accessibility/at-spi2-core-2.11*
+#=app-crypt/gcr-3.11*
+#=app-misc/geoclue-2.1*
+#=dev-lang/spidermonkey-24.2*
+#=dev-libs/atk-2.11*
+#=dev-libs/gjs-1.39*
+#=dev-libs/glib-2.39*
+#=dev-libs/gobject-introspection-1.39*
+#=dev-libs/gobject-introspection-common-1.39*
+#=dev-util/gdbus-codegen-2.39*
+#=gnome-base/gnome-control-center-3.11*
+#=gnome-base/gnome-desktop-3.11*
+#=gnome-base/gnome-session-3.11*
+#=gnome-base/gnome-shell-3.11*
+#=gnome-base/gnome-settings-daemon-3.11*
+#=gnome-extra/gnome-power-manager-3.11*
+#=gnome-extra/gnome-shell-extensions-3.11*
+#=media-libs/clutter-gst-2.0*
+#=media-libs/clutter-gtk-1.4*
+#=media-libs/clutter-1.17*
+#=media-libs/cogl-1.17*
+#=net-im/empathy-3.11*
+#=net-libs/gnome-online-accounts-3.11*
+#=x11-libs/gtk+-3.11*
+#=x11-wm/mutter-3.11*
+#=sys-power/upower-0.99*
 
 ##
 # Gnome 3.9
@@ -184,6 +222,7 @@
 =media-gfx/gnome-font-viewer-3.10*
 =media-gfx/gnome-photos-3.10*
 =media-gfx/gnome-screenshot-3.10*
+=media-gfx/graphite2-1.2*
 =media-gfx/gthumb-3.2*
 =media-gfx/postr-0.13*
 =media-gfx/sane-backends-1.0.23*
@@ -317,7 +356,8 @@
 =net-libs/rest-0.8*
 =net-libs/telepathy-farstream-0.6*
 =net-libs/telepathy-glib-0.20*
-=net-libs/webkit-gtk-2.2*
+<net-libs/webkit-gtk-2.3.5
+>net-libs/webkit-gtk-2.3.5
 =net-misc/gnome-online-miners-3.10*
 =net-misc/networkmanager-0.9.8*
 =net-misc/networkmanager-openvpn-0.9.8*
@@ -409,6 +449,17 @@
 # Wayland
 ##
 =dev-libs/wayland-1.0*
+
+##
+# Mesa 10
+##
+=x11-proto/dri3proto-1.0 ~amd64
+=x11-proto/xcb-proto-1.10 ~amd64
+=x11-proto/presentproto-1.0 ~amd64
+=x11-libs/libxcb-1.10 ~amd64
+=media-libs/mesa-10.1.0 ~amd64
+=x11-libs/libxshmfence-1.1 ~amd64
+=sys-devel/llvm-3.4*
 
 ##
 # Google
@@ -580,158 +631,4 @@ sys-apps/systemd-units
 =gnome-extra/cinnamon-session-2.0*
 =gnome-extra/cinnamon-desktop-2.0*
 =gnome-extra/cinnamon-translations-2.0*
-
-##
-# 32bit Support
-##
-=dev-libs/libusbx-1.0*
-=dev-libs/expat-2.1*
-=media-libs/tiff-3.9*
-=sys-libs/libavc1394-0.5*
-=virtual/jpeg-0*
-=virtual/libusb-0*
-=sys-libs/e2fsprogs-libs-1.42*
-=sys-fs/e2fsprogs-1.42*
-=sys-libs/gpm-1.20*
-=app-arch/bzip2-1.0*
-=dev-libs/libusb-compat-0.1*
-=dev-libs/libffi-3.0*
-=sys-apps/attr-2.4*
-=dev-libs/udis86-1.7*
-=dev-libs/elfutils-0.156*
-=app-arch/xz-utils-5.0*
-=virtual/libffi-3.0*
-=media-libs/libjpeg-turbo-1.3*
-=media-libs/libpng-1.2*
-=sys-libs/libraw1394-2.1*
-=app-text/libpaper-1.1*
-=sys-devel/llvm-3.3*
-=virtual/libusb-1*
-=sys-libs/ncurses-5.9*
-=virtual/libiconv-0*
-=x11-proto/xineramaproto-1.2*
-=x11-proto/xf86vidmodeproto-2.3*
-=x11-libs/libXScrnSaver-1.2*
-=x11-libs/libpciaccess-0.13*
-=x11-libs/libXext-1.3*
-=x11-libs/libXpm-3.5*
-=media-libs/freetype-2.4*
-=x11-proto/xf86bigfontproto-1.2*
-=x11-proto/xf86dgaproto-2.1*
-=x11-libs/libvdpau-0.7*
-=dev-libs/libpthread-stubs-0.3*
-=x11-libs/libXxf86vm-1.1*
-=x11-proto/renderproto-0.11*
-=x11-libs/libXrandr-1.4*
-=x11-libs/libXmu-1.1*
-=x11-libs/libXau-1.0*
-=x11-libs/libXft-2.3*
-=x11-libs/libxcb-1.9.1*
-=x11-libs/libXxf86dga-1.1*
-=x11-proto/recordproto-1.14*
-=x11-proto/compositeproto-0.4*
-=x11-libs/libXcomposite-0.4*
-=x11-libs/libXt-1.1*
-=x11-libs/libXrender-0.9*
-=x11-libs/libXvMC-1.0*
-=x11-proto/xproto-7.0*
-=x11-proto/scrnsaverproto-1.2*
-=x11-libs/libXp-1.0*
-=x11-proto/randrproto-1.4*
-=x11-libs/libXaw-1.0*
-=x11-libs/libXv-1.0*
-=x11-proto/videoproto-2.3*
-=x11-libs/libXtst-1.2*
-=x11-libs/libX11-1.6*
-=x11-libs/libXfixes-5.0*
-=x11-libs/libXcursor-1.1*
-=x11-proto/xextproto-7.2*
-=x11-proto/xcb-proto-1.8*
-=x11-proto/xcb-proto-1.9*
-=x11-libs/libICE-1.0*
-=x11-proto/printproto-1.0*
-=x11-proto/damageproto-1.2*
-=x11-proto/kbproto-1.0*
-=x11-libs/libXdmcp-1.1*
-=x11-libs/libSM-1.2*
-=x11-libs/libXinerama-1.1*
-=x11-libs/libXdamage-1.1*
-=x11-proto/fixesproto-5.0*
-=media-libs/libsamplerate-0.1*
-=media-plugins/caps-plugins-0.9*
-=media-sound/musepack-tools-465*
-=media-libs/ladspa-sdk-1.13*
-=media-plugins/swh-plugins-0.4*
-=media-sound/cdparanoia-3.10*
-=media-libs/libcuefile-477*
-=media-libs/libmodplug-0.8.8*
-=media-libs/libmikmod-3.2*
-=media-libs/audiofile-0.3*
-=media-libs/alsa-lib-1.0.27*
-=media-libs/libsndfile-1.0.25*
-=media-libs/flac-1.2*
-=media-libs/libogg-1.3*
-=media-plugins/alsaequal-0.6*
-=media-libs/libvorbis-1.3*
-=media-sound/jack-audio-connection-kit-0.121*
-=media-sound/twolame-0.3*
-=media-sound/wavpack-4.60*
-=media-libs/libreplaygain-477*
-=sci-libs/fftw-3.3*
-=media-libs/portaudio-19*
-=app-admin/eselect-cdparanoia-0.1*
-=media-sound/mpg123-1.15*
-=media-sound/gsm-1.0*
-=media-libs/x264-0.0*
-=media-libs/speex-1.2*
-=media-libs/libdvdnav-4.2*
-=media-libs/a52dec-0.7*
-=dev-libs/liboil-0.3*
-=media-libs/faad2-2.7*
-=media-libs/libmpeg2-0.5*
-=sys-libs/libieee1284-0.2*
-=media-libs/faac-1.28*
-=media-libs/libsidplay-1.36*
-=media-libs/libdca-0.0*
-=media-libs/libtheora-1.1*
-=media-libs/xvid-1.3*
-=media-libs/libmms-0.6*
-=media-libs/libsidplay-2.1*
-=media-libs/libmad-0.15*
-=media-libs/libvisual-0.4*
-=dev-libs/fribidi-0.19*
-=media-libs/libv4l-1.0*
-=media-video/dirac-1.0*
-=media-sound/lame-3.99*
-=media-libs/vo-aacenc-0.1*
-=media-libs/libid3tag-0.15*
-=media-libs/libshout-2.3*
-=media-libs/libdv-1.0*
-=media-libs/libmimic-1.0*
-=media-libs/libdvdcss-1.2*
-=media-libs/libvpx-1.2*
-=media-libs/libiec61883-1.2*
-=media-libs/libdvdread-4.2*
-=media-video/ffmpeg-0.10*
-=dev-libs/libcdio-0.90*
-=media-libs/libaacplus-2.0*
-=dev-libs/libcdio-paranoia-0.90*
-dev-libs/libdbusmenu2
-dev-libs/libappindicator2
-dev-libs/libindicator2
-=dev-libs/libpcre-8.33*
-=media-plugins/alsa-plugins-1.0.27*
-=sys-apps/tcp-wrappers-7.6.22*
-=sys-apps/dbus-1.6.18*
-=media-libs/libao-1.1.0*
-=net-libs/libasyncns-0.8*
-=dev-libs/json-c-0.11*
-=sys-libs/libcap-2.22*
-=sys-libs/gdbm-1.10*
-=sys-libs/readline-6.2*
-=dev-libs/icu-52*
-=dev-libs/dbus-glib-0.100*
-=dev-libs/libxml2-2.9*
-=dev-libs/nettle-2.7*
-=dev-libs/libtasn1-3.4*
 
