--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -1,4 +1,5 @@
-=net-misc/networkmanager-9999
+=net-misc/networkmanager-9999 **
+=dev-libs/libndp-9999 **
 =sys-power/upower-0.99*
 =media-gfx/sane-backends-1.0.24-r3
 
