--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -515,7 +515,24 @@ mail-client/thunderbird
 =dev-java/netbeans-extide-7.4*
 =dev-java/jsch-0.1.49*
 =virtual/jdk-1.7*
-
+=dev-java/netbeans-harness-8.0*
+=dev-java/netbeans-php-8.0*
+=dev-java/netbeans-profiler-8.0*
+=dev-java/netbeans-dlight-8.0*
+=dev-java/netbeans-platform-8.0*
+=dev-java/netbeans-javafx-8.0*
+=dev-java/netbeans-websvccommon-8.0*
+=dev-java/jboss-logging-3.1*
+=dev-util/netbeans-8.0*
+=dev-java/netbeans-apisupport-8.0*
+=dev-java/jboss-logmanager-1.5.1*
+=dev-java/netbeans-extide-8.0*
+=dev-java/netbeans-java-8.0*
+=dev-java/netbeans-ergonomics-8.0*
+=dev-java/netbeans-nb-8.0*
+=dev-java/netbeans-ide-8.0*
+=dev-java/jboss-modules-1.3*
+=dev-java/netbeans-webcommon-8.0*
 
 ##
 # Plymouth
