--- a/portage/package.use/.desktop
+++ b/portage/package.use/.desktop
@@ -119,3 +119,4 @@ media-libs/alsa-lib			python_single_target_python2_7
 net-analyzer/net-snmp                   python_single_target_python2_7
 dev-util/gtk-builder-convert            python_single_target_python2_7
 dev-util/itstool			python_single_target_python2_7
+dev-util/meld				python_single_target_python2_7
