--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -1,10 +1,12 @@
 =net-misc/networkmanager-9999 **
 =dev-libs/libndp-9999 **
 =sys-power/upower-0.99*
-=app-misc/tracker-9999 **
 =media-gfx/sane-backends-1.0.24-r3
 =net-im/telepathy-mission-control-5.16*
 =media-libs/gfbgraph-0.2*
+=x11-base/xorg-server-1.15.99*
+=media-libs/libepoxy-1.1*
+=x11-libs/glamor-0.6*
 
 ##
 # Gnome 3.12
@@ -13,14 +15,14 @@
 =app-accessibility/at-spi2-atk-2.12*
 =app-accessibility/at-spi2-core-2.12*
 =app-accessibility/caribou-0.4*
-=app-accessibility/orca-3.10*
+=app-accessibility/orca-3.12*
 =app-admin/eselect-gnome-shell-extensions-20120911
 =app-admin/gnome-system-log-3.8*
 =app-admin/openrc-settingsd-1.0*
 =app-admin/packagekit-base-0.8*
 =app-admin/packagekit-gtk-0.8*
-=app-arch/file-roller-3.10*
-=app-cdr/brasero-3.8*
+=app-arch/file-roller-3.12*
+=app-cdr/brasero-3.11*
 =app-crypt/gcr-3.12*
 =app-crypt/libsecret-0*
 =app-crypt/p11-kit-0.20*
@@ -34,10 +36,10 @@
 =app-emulation/libvirt-glib-0.1*
 =app-i18n/ibus-1.4*
 =app-i18n/ibus-1.5*
-=app-misc/bijiben-3.10*
+=app-misc/bijiben-3.12*
 =app-misc/geoclue-2.1*
-=app-misc/gnote-3.10*
-=app-misc/tracker-0.16*
+=app-misc/gnote-3.12*
+=app-misc/tracker-1.0*
 =app-shells/bash-completion-2.1*
 =app-text/evince-3.12*
 =app-text/ghostscript-gpl-9*
@@ -64,7 +66,7 @@
 =dev-libs/dee-1.0*
 =dev-libs/folks-0.9*
 =dev-libs/folks-0.10*
-=dev-libs/gdl-3.10*
+=dev-libs/gdl-3.12*
 =dev-libs/gjs-1.40*
 =dev-libs/glib-2.40*
 =dev-libs/gobject-introspection-1.40*
@@ -72,11 +74,12 @@
 =dev-libs/icu-52*
 =dev-libs/json-glib-1.0*
 =dev-libs/libatasmart-0.19*
-=dev-libs/libevdev-0.4*
+=dev-libs/libevdev-0.6*
 =dev-libs/libgdata-0.13*
 =dev-libs/libgweather-3.12*
 =dev-libs/libgee-0.14*
-=dev-libs/libpeas-1.9*
+=dev-libs/libinput-0.1*
+=dev-libs/libpeas-1.10*
 =dev-libs/libpwquality-1.2*
 =dev-libs/libtasn1-2.14*
 =dev-libs/libzeitgeist-0.3*
@@ -98,36 +101,36 @@
 =dev-python/pyxdg-0.25*
 =dev-python/rdflib-4.1*
 =dev-util/appdata-tools-0.1*
-=dev-util/anjuta-3.10*
-=dev-util/devhelp-3.10*
+=dev-util/anjuta-3.12*
+=dev-util/devhelp-3.12*
 =dev-util/gdbus-codegen-2.40*
-=dev-util/gnome-devel-docs-3.10*
+=dev-util/gnome-devel-docs-3.12*
 =dev-util/gtk-builder-convert-2.24*
 =dev-util/gtk-doc-1.20*
 =dev-util/gtk-doc-am-1.20*
 =dev-util/fix-la-relink-command-0.1*
 
-=games-arcade/gnome-nibbles-3.10*
-=games-arcade/gnome-robots-3.10*
-=games-board/four-in-a-row-3.10*
-=games-board/gnome-chess-3.10*
-=games-board/gnome-mahjongg-3.10*
-=games-board/gnome-mines-3.10*
-=games-board/iagno-3.10*
-=games-board/tali-3.10*
-=games-puzzle/five-or-more-3.10*
-=games-puzzle/gnome-klotski-3.10*
-=games-puzzle/gnome-sudoku-3.10*
-=games-puzzle/gnome-tetravex-3.10*
-=games-puzzle/lightsoff-3.10*
-=games-puzzle/quadrapassel-3.10*
-=games-puzzle/swell-foop-3.10*
+=games-arcade/gnome-nibbles-3.12*
+=games-arcade/gnome-robots-3.12*
+=games-board/four-in-a-row-3.12*
+=games-board/gnome-chess-3.12*
+=games-board/gnome-mahjongg-3.12*
+=games-board/gnome-mines-3.12*
+=games-board/iagno-3.12*
+=games-board/tali-3.12*
+=games-puzzle/five-or-more-3.12*
+=games-puzzle/gnome-klotski-3.12*
+=games-puzzle/gnome-sudoku-3.12*
+=games-puzzle/gnome-tetravex-3.12*
+=games-puzzle/lightsoff-3.12*
+=games-puzzle/quadrapassel-3.12*
+=games-puzzle/swell-foop-3.12*
 =gnome-base/dconf-0.20*
 =gnome-base/gconf-3.2*
 =gnome-base/gdm-3.12*
 =gnome-base/gnome-3.8*
 =gnome-base/gnome-applets-3.8*
-=gnome-base/gnome-common-3.8*
+=gnome-base/gnome-common-3.12*
 =gnome-base/gnome-control-center-3.12*
 =gnome-base/gnome-core-apps-3*
 =gnome-base/gnome-core-libs-3*
@@ -148,30 +151,33 @@
 =gnome-base/libgnomekbd-3.8*
 =gnome-base/librsvg-2.40*
 =gnome-base/nautilus-3.12*
+=gnome-extra/at-spi-2.12*
 =gnome-extra/evolution-data-server-3.12*
 =gnome-extra/evolution-ews-3.8*
 =gnome-extra/evolution-kolab-3.8*
 =gnome-extra/gconf-editor-3.0*
-=gnome-extra/gnome-boxes-3.10*
+=gnome-extra/gnome-boxes-3.12*
 =gnome-extra/gnome-boxes-nonfree-0.0*
 =gnome-extra/gnome-calculator-3.12*
-=gnome-extra/gnome-clocks-3.10*
-=gnome-extra/gnome-color-manager-3.10*
+=gnome-extra/gnome-clocks-3.12*
+=gnome-extra/gnome-color-manager-3.12*
 =gnome-extra/gnome-contacts-3.12*
 =gnome-extra/gnome-documents-3.12*
+=gnome-extra/gnome-logs-3.12*
 =gnome-extra/gnome-games-3.6*
-=gnome-extra/gnome-packagekit-3.8*
+=gnome-extra/gnome-packagekit-3.12*
 =gnome-extra/gnome-power-manager-3.12*
 =gnome-extra/gnome-screensaver-3.6*
 =gnome-extra/gnome-search-tool-3.8*
 =gnome-extra/gnome-shell-extensions-3.12*
+=gnome-extra/gnome-software-3.12*
 =gnome-extra/gnome-system-monitor-3.12*
-=gnome-extra/gnome-tweak-tool-3.10*
+=gnome-extra/gnome-tweak-tool-3.12*
 =gnome-extra/gnome-user-docs-3.12*
 =gnome-extra/gnome-user-share-3.10*
 =gnome-extra/gnome-utils-3.8*
-=gnome-extra/gnome-weather-3.10*
-=gnome-extra/gtkhtml-4.6*
+=gnome-extra/gnome-weather-3.12*
+=gnome-extra/gtkhtml-4.8*
 =gnome-extra/gucharmap-3.10*
 =gnome-extra/mousetweaks-3.10*
 =gnome-extra/nautilus-sendto-3.8*
@@ -188,12 +194,12 @@
 =gnome-extra/zeitgeist-datasources-0.8*
 =gnome-extra/zenity-3.8*
 
-=mail-client/evolution-3.10*
+=mail-client/evolution-3.12*
 =media-gfx/eog-3.12*
 =media-gfx/eog-plugins-3.12*
-=media-gfx/gnome-font-viewer-3.10*
-=media-gfx/gnome-photos-3.10*
-=media-gfx/gnome-screenshot-3.10*
+=media-gfx/gnome-font-viewer-3.12*
+=media-gfx/gnome-photos-3.12*
+=media-gfx/gnome-screenshot-3.12*
 =media-gfx/graphite2-1.2*
 =media-gfx/gthumb-3.2*
 =media-gfx/postr-0.13*
@@ -292,8 +298,9 @@
 =media-plugins/gst-plugins-vaapi-0.4*
 =media-plugins/gst-plugins-vpx-1.2*
 =media-plugins/gst-plugins-x264-1.2*
-=media-sound/gnome-music-3.10*
+=media-sound/gnome-music-3.12*
 =media-sound/pulseaudio-4*
+=media-sound/pulseaudio-5*
 =media-sound/sound-juicer-3.5*
 =media-sound/sound-juicer-3.8*
 =media-video/cheese-3.12*
@@ -305,6 +312,7 @@
 =net-im/empathy-3.12*
 =net-im/telepathy-logger-0.8*
 =net-im/telepathy-mission-control-5.16* **
+=net-irc/polari-3.12*
 =net-libs/farstream-0.2*
 =net-libs/glib-networking-2.40*
 =net-libs/gnome-online-accounts-3.12*
@@ -336,8 +344,8 @@
 =net-misc/modemmanager-1.0*
 =net-misc/rygel-0.20*
 =net-misc/spice-gtk-0.14*
-=net-misc/vinagre-3.10*
-=net-misc/vino-3.10*
+=net-misc/vinagre-3.12*
+=net-misc/vino-3.12*
 =net-print/cups-1.6*
 =net-print/cups-filters-1.0*
 =net-print/cups-pk-helper-0.2*
@@ -346,9 +354,9 @@
 =net-wireless/gnome-bluetooth-3.12*
 
 =sci-geosciences/geocode-glib-3.12* 
-=sci-geosciences/gnome-maps-3.10*
+=sci-geosciences/gnome-maps-3.12*
 =sys-apps/accountsservice-0.6*
-=sys-apps/baobab-3.10*
+=sys-apps/baobab-3.12*
 =sys-apps/gnome-disk-utility-3.12*
 =sys-auth/consolekit-0.4.5_p20120320*
 =sys-auth/nss-myhostname-0.3*
@@ -360,7 +368,7 @@
 =sys-libs/libosinfo-0.2*
 =sys-libs/tevent-0.9.18*
 
-=www-client/epiphany-3.10*
+=www-client/epiphany-3.12*
 
 =x11-base/xorg-server-1.14*
 =x11-libs/cairo-1.12*
