--- a/portage/package.use/.desktop
+++ b/portage/package.use/.desktop
@@ -51,7 +51,6 @@ media-libs/clutter			evdev
 media-libs/mesa				gbm
 net-wireless/bluez			client monitor obex tools
 media-plugins/grilo-plugins		upnp-av
-www-client/chromium                     aura
 app-office/libreoffice                  gtk3 jemalloc telepathy
 app-emulation/emul-linux-x86-qtlibs     gtkstyle
 app-emulation/libvirt                   qemu
@@ -64,6 +63,7 @@ sys-fs/udisks                           -crypt
 www-plugins/chrome-binary-plugins       google-chrome
 app-crypt/gcr                           vala
 media-libs/grilo                        playlist
+net-misc/spice-gtk                      usbredir vala
 
 ##
 # Test
@@ -72,6 +72,7 @@ sys-kernel/dracut		dracut_modules_plymouth optimization
 x11-libs/libdrm			libkms
 sys-boot/plymouth		gdm
 sys-apps/systemd		-openrc
+media-libs/cogl                 evdev
 
 ##
 # Temp
@@ -121,3 +122,4 @@ dev-util/gtk-builder-convert            python_single_target_python2_7
 dev-util/itstool			python_single_target_python2_7
 app-admin/packagekit-base		python_single_target_python2_7
 media-gfx/gimp				python_single_target_python2_7
+net-misc/spice-gtk			python_single_target_python2_7
