--- a/portage/package.keywords/.desktop
+++ b/portage/package.keywords/.desktop
@@ -4,9 +4,12 @@
 =media-gfx/sane-backends-1.0.24-r3
 =net-im/telepathy-mission-control-5.16*
 =media-libs/gfbgraph-0.2*
+=net-libs/libgfbgraph-0.2*
 =x11-base/xorg-server-1.15.99*
 =media-libs/libepoxy-1.1*
 =x11-libs/glamor-0.6*
+=dev-libs/libgcrypt-1.5.3*
+=sys-devel/clang-3.4*
 
 ##
 # Gnome 3.12
@@ -232,7 +235,7 @@
 =media-libs/libchamplain-0.12*
 =media-libs/libgnome-media-profiles-3*
 =media-libs/libgphoto2-2.5*
-=media-libs/libmediaart-0.3*
+=media-libs/libmediaart-0.4*
 =media-libs/libpng-1.6.6*
 =media-libs/libquvi-0.9*
 =media-libs/libquvi-scripts-0.9*
@@ -341,7 +344,7 @@
 =net-misc/networkmanager-0.9.9*
 =net-misc/networkmanager-openvpn-0.9.8*
 =net-misc/networkmanager-openvpn-0.9.9*
-=net-misc/modemmanager-1.0*
+=net-misc/modemmanager-1.2*
 =net-misc/rygel-0.20*
 =net-misc/spice-gtk-0.14*
 =net-misc/vinagre-3.12*
@@ -391,7 +394,7 @@
 =x11-libs/vte-0.36*
 =x11-libs/xpyb-1.3.1*
 =x11-misc/alacarte-3.10*
-=x11-misc/colord-1.0*
+=x11-misc/colord-1.2*
 =x11-misc/notification-daemon-0.7*
 =x11-proto/inputproto-2.3*
 =x11-proto/xcb-proto-1.8*
