--- a/portage/package.use/.desktop
+++ b/portage/package.use/.desktop
@@ -1,4 +1,4 @@
-media-libs/mesa				g3dvl gles1 gles2 openvg vdpau xvmc xa -llvm
+media-libs/mesa				g3dvl gles1 gles2 openvg vdpau xvmc xa llvm
 x11-libs/cairo				openvg
 x11-libs/gtk+				xinerama
 =x11-libs/cairo-1.12*			-qt4
@@ -73,7 +73,7 @@ x11-libs/libdrm			libkms
 sys-boot/plymouth		gdm
 sys-apps/systemd		-openrc
 media-libs/cogl                 evdev
-
+media-libs/libmediaart		-qt4
 ##
 # Temp
 ##
@@ -97,6 +97,10 @@ dev-vcs/subversion	java
 sys-boot/plymouth		-openrc
 sys-kernel/dracut		net
 
+
+
+xfce-base/xfdesktop		-thunar
+sys-devel/llvm			video_cards_radeon clang
 
 
 
@@ -123,3 +127,5 @@ dev-util/itstool			python_single_target_python2_7
 app-admin/packagekit-base		python_single_target_python2_7
 media-gfx/gimp				python_single_target_python2_7
 net-misc/spice-gtk			python_single_target_python2_7
+gnome-extra/gnome-tweak-tool            python_single_target_python2_7
+gnome-extra/zeitgeist-extensions        python_single_target_python2_7
