--- a/portage/package.unmask/.desktop
+++ b/portage/package.unmask/.desktop
@@ -1,4 +1,5 @@
 =dev-python/python-exec-10000.1
+
 ##
 # Drivers
 ##
@@ -440,3 +441,5 @@
 =net-libs/libgfbgraph-0.2.2*
 =net-im/telepathy-mission-control-5.16*
 =media-plugins/grilo-plugins-0.2*
+=sys-libs/libosinfo-0.2*
+=gnome-extra/nautilus-tracker-tags-1.0*
